--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+
+  <head>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="joshsanz.github.io : Adventures in Embedded Systems" />
+
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>joshsanz.github.io</title>
+  </head>
+
+  <body>
+
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/joshsanz">View on GitHub</a>
+
+          <h1 id="project_title">joshsanz.github.io</h1>
+          <h2 id="project_tagline">Adventures in Embedded Systems</h2>
+
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="previous-work" class="anchor" href="#previous-work"><span class="octicon octicon-link"></span></a>Previous Work</h3>
+
+<p>A <a href="http://youtu.be/8uc4m1cFXl4">robotic arm</a></p>
+
+<h3>
+<a name="current-project" class="anchor" href="#current-project"><span class="octicon octicon-link"></span></a>Current Project</h3>
+      </section>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
+    
+
+  </body>
 </html>
